# dyst

./: .gitmodules  Cargo.toml  README.md  build.zig
src/: common_directories.rs  github.zig  main.rs  main.zig
src/cli/: install.rs  list.rs  lock.rs  mod.rs  prereleases.rs  remove.rs  rename.rs  search.rs  update.rs
