[package]
name = "dyst"
version = "0.1.0"
description = "A distilled package manager for GitHub release assets."
repository = "https://github.com/DISTREAT/dyst"
license = "MIT"
authors = ["DISTREAT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
archive-reader = "0.3.5"
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
microxdg = "0.1.0"
octocrab = "0.31.2"
reqwest = "0.11.22"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
