[package]
name = "dyst"
version = "0.1.0"
description = "A distilled package manager for GitHub release assets."
repository = "https://github.com/DISTREAT/dyst"
license = "MIT"
authors = ["DISTREAT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
archive-reader = "0.3.5"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
file-format = "0.21.0"
futures-core = "0.3.29"
futures-util = "0.3.29"
indicatif = "0.17.7"
itertools = "0.11.0"
microxdg = "0.1.0"
octocrab = "0.31.2"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["stream"] }
sqlite3 = "0.24.0"
symlink = "0.1.0"
tempfile = "3.8.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
walkdir = "2.4.0"
